--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,9 @@
             <version>1.3</version>
           </dependency>
         </dependencies>
+        <configuration>
+          <goals>deploy</goals>
+        </configuration>
       </plugin>
     </plugins>
     <extensions>
