Use my java.net ID not my normal ID.
Signed-off-by: Tom Rini <tom_rini@mentor.com>

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <url>http://wiki.hudson-ci.org/display/HUDSON/Lab+Manager+Plugin</url>
   <developers>
     <developer>
-      <id>trini</id>
+      <id>tomrini</id>
       <name>Tom Rini</name>
       <email>tom_rini@mentor.com</email>
     </developer>
