pom.xml: Update email address
Signed-off-by: Tom Rini <trini@kernel.crashing.org>

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <developer>
       <id>tomrini</id>
       <name>Tom Rini</name>
-      <email>tom_rini@mentor.com</email>
+      <email>trini@kernel.crashing.org</email>
     </developer>
   </developers>
   <scm>
